cmake_minimum_required(VERSION 4.2)
project(tiny_sql CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED On)

# copied from googletest quickstart guide
include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

add_executable(tiny_sql)
target_sources(tiny_sql
    PRIVATE
        src/main.cpp
        src/tokenizer.cpp
)
target_link_libraries(tiny_sql PRIVATE -lstdc++exp)

enable_testing()

add_executable(
  hello_test
  tests/hello_test.cpp
)
target_link_libraries(
  hello_test
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(hello_test)